# buyer-agent

./: .ci-smoke-lkma-232  .env.example  .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.sh
.github/workflows/: deploy.yml
CODING_STANDARDS/: index.html
ai-assistant/developer-setup/: index.html
ai-assistant/mcp-tools/: index.html
ai-assistant/setup-wizard/: index.html
ai-assistant/slash-commands/: index.html
api/: openapi.json
api/a2a-client/: index.html
api/audience_plan_wire_format/: index.html
api/authentication/: index.html
api/bookings/: index.html
api/change-requests/: index.html
api/deals/: index.html
api/mcp-client/: index.html
api/media-kit/: index.html
api/overview/: index.html
api/products/: index.html
api/protocols/: index.html
api/seller-discovery/: index.html
api/sessions/: index.html
architecture/agent-hierarchy/: index.html
architecture/agentcore/: index.html
architecture/booking-flow/: index.html
architecture/buyer-deal-flow/: index.html
architecture/deal-library/: index.html
architecture/deal-store/: index.html
architecture/mcp-server/: index.html
architecture/models/: index.html
architecture/overview/: index.html
architecture/ssp-connectors/: index.html
architecture/storage-backends/: index.html
architecture/tools/: index.html
claude-desktop-setup/: index.html
data/: README.md  campaign_briefs.json
docs/: index.md
docs/ai-assistant/: developer-setup.md
docs/api/: audience_plan_wire_format.md
docs/architecture/: agentcore.md
docs/guides/: agentcore-deployment.md  configuration.md  deployment-ops-guide.md
docs/integration/: iab-diligence-platform.md
event-bus/overview/: index.html
getting-started/quickstart/: index.html
guides/agentcore-deployment/: index.html
guides/budget-pacing/: index.html
guides/campaign-pipeline/: index.html
guides/configuration/: index.html
guides/creative-management/: index.html
guides/deal-booking/: index.html
guides/deal-library/: index.html
guides/deployment/: index.html
guides/deployment-ops-guide/: index.html
guides/identity/: index.html
guides/linear-tv/: index.html
guides/media-kit/: index.html
guides/multi-seller/: index.html
guides/multi-seller-orchestration/: index.html
guides/negotiation/: index.html
guides/overview/: index.html
guides/sessions/: index.html
guides/ssp-connectors/: index.html
infra/: README.md
infra/docker/: Dockerfile
integration/iab-diligence-platform/: index.html
integration/opendirect/: index.html
integration/seller-agent/: index.html
multi-client-setup/: index.html
overrides/: main.html
patches/: crewai_bedrock_fix.py
planning/SSP_INTEGRATION_PLAN/: index.html
search/: search_index.json
state-machines/change-request-flow/: index.html
state-machines/order-lifecycle/: index.html
tests/: test.sh
tests/integration/: test_path_a_audience_e2e.py  test_path_b_audience_e2e.py  test_real_model_path_e2e.py
tests/smoke/: test_mcp_e2e.py  test_mcp_streamable.py
tests/unit/: test_agent_hierarchy.py  test_audience_audit_log.py  test_audience_degradation.py  test_audience_planner_reasoning.py  test_audience_planner_wiring.py  test_audience_strictness.py  test_buyer_deal_flow_audience.py  test_buyer_preflight.py  test_buyer_ui.py  test_campaign_brief_migration.py  test_channel_crew_audience_invocation.py  test_client.py  test_cpm_fallback_removal.py  test_deal_entry.py  test_deal_library_templates.py  test_deals_client_dual_content_type.py  test_iac_templates.py  test_mcp_approval_apikey.py  test_mcp_campaign_tools.py  test_mcp_deal_library.py  test_mcp_negotiation_orders.py  test_mcp_seller_discovery.py  test_mcp_server.py  test_mcp_ssp_tools.py  test_mcp_streamable_http.py  test_mcp_template_reporting.py  test_openrtb_builder.py  test_orchestrator_audience_plan.py  test_pricing_provenance.py  test_random_seed_and_cors.py  test_setup_wizard.py  (+9 more)
(+74 files in other folders)
